
= Commandline Tool

== 2.3.0

* Added setting `jqassistant.repositories.ignore-transitive-repositories`

== 2.2.0

* Added support to specify authentication credentials for mirrors of plugin repositories in `.jqassistant.yml` and Maven settings.

== 2.1.0

* Provide different distributions for JDK 11 (Neo4j 4.x) and JDK 17 or later (Neo4j 5.x)

== 2.0.10

* Added command line parameter `-mavenSettings` for specifying the location of a Maven `settings.xml` file to use for repository, proxy and mirror configurations
* Improved support for mirrors of remote repositories for plugin provisioning
* Added setting `non-proxy-hosts` to proxy configuration for plugin provisioning

== 2.0.7

* Added task `effective-configuration` to print the current configuration as YAML representation on the console

== 2.0.0

* Removed configuration options from command line, as they have been completely replaced by the YAML/properties based configuration mechanism
* Removed plugins from distribution and migrated provision of core plugin to dynamic, configuration based resolution on startup
* Use Maven settings from `~/.m2/settings.xml` automatically configure local and remote repositories to download plugins

== 1.12.0

* Added option `-continueOnFailure` for the analysis task.

== 1.11.0

* Added new commandline task `list-plugins`. This task lists all plugins
  known to jQAssistant. Useful to see which plugins are active during the
  scan, analyze, and report phase of jQAssistant.

== 1.9.0

* Added command line option `createReportArchive` to the analyze task for creating a ZIP archive containing the generated reports
* Added command line options `storeEncryption`, `storeTrustStrategy` and `storeTrustCertificate` to control encryption for bolt connections to a Neo4j database

== 1.8.0

* Added Asciidoc Report plugin to CLI distribution
* Removed commandline options `embeddedApocEnabled` `embeddedGraphAlgorithmsEnabled`.
  These are now available as separate plugins,