@@ -4,6 +4,7 @@
 == 2.3.0
 
 * Added setting `jqassistant.repositories.ignore-transitive-repositories`
+* Use `~/.m2/repository` as plugin repository if a `settings.xml` is used which does not contain a local repository setting
 
 == 2.2.0
 
